# async-linereader-coroutine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
async-coro/: CMakeLists.txt
async-coro/app/: async-word-count.cxx
async-coro/lib/: coro-runtime.cxx  coro-runtime.hxx  coro-scheduler.cxx  coro-scheduler.hxx  coro-task.cxx  coro-task.hxx  file-reader.cxx  file-reader.hxx  task-pool.cxx  task-pool.hxx
data/: edgar-allan-poe.txt  jekyll-and-hyde.txt  the-trial.txt
sync-thread/: CMakeLists.txt
sync-thread/app/: read-several-files.cxx  sync-word-count.cxx
sync-thread/lib/: file-reader.cxx  file-reader.hxx
